Bugs
Bugs: Extra space bottom of the page

--- a/vsfWeb/commons/static/scss/layout/layout.scss
+++ b/vsfWeb/commons/static/scss/layout/layout.scss
@@ -149,7 +149,7 @@
 
 
 footer {
-	margin-top: 450px;
+	//margin-top: 450px;
 }
 
 #vsf_footer {
