--- a/vsfWeb/commons/static/scss/pages/pages.scss
+++ b/vsfWeb/commons/static/scss/pages/pages.scss
@@ -216,7 +216,7 @@ tr {
 #mTable {
     margin-top: 200px;
     background-color: $lighterGray;
-    height:100vh;
+
 }
 
 .mheader {
